[gd_scene load_steps=3 format=2]

[ext_resource path="res://environment/BossObstacleSpawner.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/smas-smb3_thud.wav" type="AudioStream" id=2]

[node name="BossObstacleSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.5

[node name="Bullet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
